# AM-CFD

./: CMakeLists.txt  CMakeSetup.json  License.txt  README.md  configure.sh
Examples/MultiLayer/: MultiLayerTest.crs  inputfile.k  multiTrackmesh_01x01.k
Examples/MultiLayer/multiLayerExample/: inputfile.k  run.sh
Examples/MultiLayer/multiLayerExampleTrackID/: MultiLayerTest.crs  inputfile.k  multiTrackmesh_01x01.k
Examples/MultiLayer/test_script/: multiTrackmesh_01x01.k  run.sh
Examples/MultiLayerReduced_Final/InputFiles/: inputfile_MultiLayer.k  inputfile_MultiLayer_debug.k  inputfile_SingleTrack.k
Examples/MultiLayerReduced_Final/MeshFiles/: multiTrackmesh_01x01.k
Examples/MultiLayerReduced_Final/SimulationResults/Version_OpenMp/: Trial_MultiLayer.pvd  Trial_MultiLayer_Residuals.txt  finalGeom_MultiLayer.txt  run_thermosolutal_ares_alternate.sh
Examples/MultiLayerReduced_Final/ToolFiles/: MultiLayerTest.crs
Examples/MultiTrack/: MultiLayerTest.crs  inputfile.k
Examples/MultiTrack/testScript/: MultiLayerTest.crs  inputfile.k
Examples/SingleLayerReduced_Adaptive_diagonal/SimulationResults/Version_OpenMp/: Trial_MultiLayer_Residuals.txt  finalGeom_MultiLayer.txt
Examples/SingleLayerReduced_Adaptive_diagonal/ToolFiles/: MultiLayerTest.crs
Examples/SingleLayerReduced_Adaptive_diagonal_reversed/MeshFiles/: multiTrackmesh_01x01.k
Examples/SingleLayerReduced_Adaptive_diagonal_reversed/RunScripts/: run_thermosolutal_ares.sh
Examples/SingleLayerReduced_Adaptive_diagonal_reversed/SimulationResults/Version_OpenMp/: Trial_MultiLayer_Residuals.txt  finalGeom_MultiLayer.txt
Examples/SingleLayerReduced_Adaptive_diagonal_reversed/ToolFiles/: MultiLayerTest.crs
Examples/SingleLayerReduced_X_Direction/: run_thermosolutal_ares_alternate.sh
Examples/SingleLayerReduced_X_Direction/InputFiles/: inputfile_MultiLayer_debug.k
Examples/SingleLayerReduced_X_Direction/RunScriptsCollections/: run_interactive_ares.sh
Examples/SingleLayerReduced_X_Direction/SimulationResults/Version_OpenMp/: Trial_MultiLayer_Residuals.txt  finalGeom_MultiLayer.txt
Examples/SingleLayerReduced_X_Direction/ToolFiles/: MultiLayerTest.crs
Examples/SingleLayerReduced_X_Direction/resources/: Preprocess_MeshChecker.py  heatSourceParametersTable.k  inputfile_MultiLayer.k  inputfile_MultiLayer_debug.k  inputfile_SingleTrack.k  timeStepInformation.k
Examples/SingleLayerReduced_X_Direction_reversed/MeshFiles/: multiTrackmesh_01x01.k
Examples/SingleLayerReduced_X_Direction_reversed/RunScripts/: run_thermosolutal_ares_alternate.sh
Examples/SingleLayerReduced_X_Direction_reversed/SimulationResults/Version_OpenMp/: Trial_MultiLayer_Residuals.txt  finalGeom_MultiLayer.txt
Examples/SingleLayerReduced_X_Direction_reversed/ToolFiles/: MultiLayerTest.crs
Examples/SingleLayerReduced_Y_Direction/InputFiles/: inputfile_MultiLayer.k
Examples/SingleLayerReduced_Y_Direction/MeshFiles/: multiTrackmesh_01x01_debug.k
Examples/SingleLayerReduced_Y_Direction/ToolFiles/: MultiLayerTest.crs
Examples/SingleLayerReduced_Y_Direction_reversed/InputFiles/: inputfile_MultiLayer_debug.k
Examples/SingleLayerReduced_Y_Direction_reversed/MeshFiles/: multiTrackmesh_01x01.k
Examples/SingleLayerReduced_Y_Direction_reversed/ToolFiles/: MultiLayerTest.crs
Examples/TwoLayerReduced_Y_Direction/InputFiles/: inputfile_MultiLayer.k  inputfile_MultiLayer_debug.k
Examples/TwoLayerReduced_Y_Direction/ToolFiles/: MultiLayerTest.crs
doc/: Doxyfile
help/: Helpful_Commands.odt
src/: CMakeLists.txt  main.cpp
src/headers/: BoundCondManager.h  CFDSolverManager.h  DomainManager.h  Formula.h  FreeSurfaceManager.h  Mesh.h  PrintManager.h  SolutionVariableManager.h  tecWriter.h  vtsBinWriter.h
src/sources/: BoundCondManager.cpp  CFDSolverManager.cpp  DomainManager.cpp  FreeSurfaceManager.cpp  Mesh.cpp  PrintManager.cpp  SolutionVariableManager.cpp  tecWriter.cpp  vtsBinWriter.cpp
(+270 files in other folders)
